--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,24 @@ nav{
     font-size: 2.5rem;
     text-align: center;
 }
-
+.buscador{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+}
+#search-input{
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: 1rem;
+    border: 1px solid #ff9327;
+    border-radius: 10px 0px 0px 10px;
+}
+.lupa{
+    border: 1px solid #ff9327;
+    cursor: pointer;
+    border-radius: 0px 10px 10px 0px;
+}
 
 #cards{
     width: 95%;
@@ -47,8 +64,8 @@ nav{
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    background-image: linear-gradient(144deg,#2ea4d2, #6bd7f7 30%, #c2c2c2);
-    border: 4px solid #ff9327;
+    background-image: linear-gradient(144deg,#6bd7f7, #6bd7f7 30%, #c2c2c2);
+    border: 2px solid #ff8002;
     border-radius: 10px;
 }
 .img-perfil{
@@ -57,30 +74,46 @@ nav{
     padding: .3rem;
     object-fit: cover;
     border-radius: 50%;
+    cursor: pointer;
 }
 .mentor{
     height: 80px;
+    margin-top: .5rem;
+    padding: 1rem;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    gap: 1.5rem;
 }
 .mentee{
     height: 80px;
+    margin-bottom: 0.5rem;
+    padding: 1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    gap: 4rem;
+    gap: 1.5rem;
 }
-.info-mentee{
+.info-mentor{
+    width: 235px;
     display: flex;
     flex-direction: column;
 }
-.sala{
+
+.info-mentee{
+    width: 235px;
+    margin-left: .5rem;
+    display: flex;
+    flex-direction: column;
+}
+.SALA{
     font-size: 24px;
     font-weight: bold;
     color: #000000;
     text-align: center;
 }
-.text-sala{
+.text-SALA{
+    border: 1px dashed #ff9327;
     margin: 0;
     font-size: 18px;
     text-shadow: 0px 0px 1px #ff9327;
