--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,92 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;600&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Gabarito', sans-serif;
 }
+
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.411), rgba(131, 131, 131, 0.274)), url(../img/fondo.png);
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
 }
-nav{
+
+nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem;
 }
-.img-nav{
+
+.img-nav {
     width: 70px;
     object-fit: contain;
 }
-.banner{
-    color: #d6d6d6;
+
+.logo-pescar {
+    width: 130px;
+}
+
+.logo-loreal {
+    width: 80px;
+    height: 80px;
+    padding: .5rem;
+    background-color: #cccccc;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.banner {
+    color: #ffffff;
     text-shadow: 0px 0px 3px #000;
 }
-.banner h1{
+
+.banner h1 {
     font-size: 4rem;
     text-align: center;
+    font-family: 'Lato', sans-serif;
 }
-.banner h2{
+
+.banner h2 {
     font-size: 2.5rem;
     text-align: center;
+    font-family: 'Lato', sans-serif;
 }
-.buscador{
+
+.buscador {
     width: 100%;
     display: flex;
     justify-content: center;
     padding: 1rem;
 }
-#search-input{
+
+#search-input {
     font-size: 20px;
     font-weight: 500;
     padding-left: 1rem;
     border: 1px solid #ff9327;
     border-radius: 10px 0px 0px 10px;
+    outline: none;
 }
-.lupa{
+
+.lupa {
     border: 1px solid #ff9327;
     cursor: pointer;
     border-radius: 0px 10px 10px 0px;
 }
 
-#cards{
+#cards {
     width: 95%;
     margin: auto;
     display: flex;
@@ -58,26 +94,65 @@ nav{
     flex-wrap: wrap;
     gap: 1rem;
 }
-.card-mentoring{
+
+.card-mentoring {
     margin: 1rem;
     width: 375px;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    background-image: linear-gradient(144deg,#6bd7f7, #6bd7f7 30%, #c2c2c2);
+    background-image: linear-gradient(144deg, #6bd7f7, #6bd7f7 30%, #0003b1);
     border: 2px solid #ff8002;
     border-radius: 10px;
 }
-.img-perfil{
+
+.img-perfil {
     width: 80px;
     height: 80px;
     padding: .3rem;
     object-fit: cover;
     border-radius: 50%;
+    border: 2px solid #ff8002;
     cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
 }
-.mentor{
+
+.img-perfil:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-color: white;
+}
+
+.img-perfil:hover::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    animation: pulse 1s 2s;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 0.5;
+    }
+
+    50% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 0.5;
+    }
+}
+
+.mentor {
     height: 80px;
     margin-top: .5rem;
     padding: 1rem;
@@ -86,7 +161,8 @@ nav{
     align-items: center;
     gap: 1.5rem;
 }
-.mentee{
+
+.mentee {
     height: 80px;
     margin-bottom: 0.5rem;
     padding: 1rem;
@@ -95,27 +171,42 @@ nav{
     align-items: center;
     gap: 1.5rem;
 }
-.info-mentor{
+
+.info-mentor,
+.info-mentee {
     width: 235px;
     display: flex;
     flex-direction: column;
+    text-shadow: 0px 0px 1px #ffffff;
+    font-weight: bold;
+    color: #333;
+
 }
 
-.info-mentee{
-    width: 235px;
+.info-mentee {
     margin-left: .5rem;
-    display: flex;
-    flex-direction: column;
 }
-.SALA{
+
+.card-title {
+    font-size: 24px;
+    text-shadow: 0px 0px 2px #ffffff;
+    font-weight: bold;
+}
+
+.SALA {
+    display: flex;
+    justify-content: center;
     font-size: 24px;
     font-weight: bold;
     color: #000000;
     text-align: center;
+    border-top: 1px dashed #ff9327;
+    border-bottom: 1px dashed #ff9327;
 }
-.text-SALA{
-    border: 1px dashed #ff9327;
+
+.text-SALA {
     margin: 0;
-    font-size: 18px;
-    text-shadow: 0px 0px 1px #ff9327;
+    width: 100px;
+    text-shadow: 0px 0px 1px #ffffff;
+    font-weight: bold;
 }
