--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,17 +210,26 @@ nav {
     text-shadow: 0px 0px 1px #ffffff;
     font-weight: bold;
 }
-
-/* .SALA{
-    font-size: 24px;
-    font-weight: bold;
-    color: #000000;
-    text-align: center;
+@media (max-width:768px) {
+    .img-nav {
+        width: 70px;
+        height: 70px;
+    }
+    .logo-pescar, .img-nav {
+        width: 80px;
+        height: 80px;
+    }
+    .card-mentoring{
+        width: 340px;
+    }
 }
-.text-SALA{
-    border-top: 1px dashed #ff9327;
-    border-bottom: 1px dashed #ff9327;
-    margin: 0;
-    font-size: 18px;
-    text-shadow: 0px 0px 1px #ff9327;
-} */
+
+@media(max-width:500px) {
+    .logo-pescar, .img-nav {
+        width: 50px;
+        height: 50px;
+    }
+    .card-mentoring{
+        width: 340px;
+    }
+}
